--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aug-tool
-version = 0.0.5
+version = 0.0.6
 author = Hakan Aktaş
 author_email = hakanaktas4541@gmail.com
 description = A small package to increase your data for your machine learning project
@@ -18,6 +18,11 @@ classifiers =
 package_dir =
     = src
 packages = find:
+install_requires =
+    Pillow>=8.2
+    beautifulsoup4>=4.9
+    bs4>=0.0.1
+    
 python_requires = >=3.6
 
 [options.packages.find]
