--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = aug-tool
-version = 0.0.6
+name = aug_tool
+version = 0.1.2
 author = Hakan Aktaş
 author_email = hakanaktas4541@gmail.com
-description = A small package to increase your data for your machine learning project
+description = A package to increase your data for your machine learning project
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/hakanaktas1/aug-tool
@@ -20,9 +20,10 @@ package_dir =
 packages = find:
 install_requires =
     Pillow>=8.2
-    beautifulsoup4>=4.9
     bs4>=0.0.1
-    
+    beautifulsoup4>=4.12.2
+    lxml>=4.9.2
+
 python_requires = >=3.6
 
 [options.packages.find]
